--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,15 +1,13 @@
 .M-ui{
-    align-items: center;
-    display: flex;
+    justify-content: center;
     
  }
  
  .ui{
     
-   align-items: center;
-     align-self: center;
      height: 20rem;
-     min-width: 225px;
+     text-align: center;
+     max-width: 50rem;
      background-color: whitesmoke;
      border-radius: 15px;
      padding: 10px 20px 15px 20px;
@@ -29,8 +27,4 @@
  .username-input {
      height: 1rem;
  }
- .Titel{
-     
-     align-items: center;
-     display: flex;
- }
+ 
